# Software_Development

./: .gitignore  CMakeLists.txt  Makefile  README.md  Report.docx  TODO  allCommands.sh  auxMethods.c  auxMethods.h  callgrind.out.15866  compile.sh  implementation.c  implementation.h  joinProgram  main.c  massif.out.15991  metadataColumn.c  metadataColumn.h  queryMethods.c  queryMethods.h  radixHashJoin.c  radixHashJoin.h  relationMethods.c  relationMethods.h  rowIdArrayMethods.c  rowIdArrayMethods.h  rowIdListMethods.c  rowIdListMethods.h  run.sh  runTestharness.sh  statisticsMethods.c  statisticsMethods.h  test  test.result  threadPool.c  threadPool.h
cutest-1.5/: AllTests.c  CuTestAuxMethods.c  CuTestAuxMethods.h  CuTestImplementation.c  CuTestImplementation.h  CuTestMetadataColumn.c  CuTestMetadataColumn.h  CuTestQueryMethods.c  CuTestQueryMethods.h  CuTestRadixHashJoin.c  CuTestRadixHashJoin.h  CuTestRelationMethods.c  CuTestRelationMethods.h  CuTestRowIdArrayMethods.c  CuTestRowIdArrayMethods.h  CuTestStatisticsMethods.c  CuTestStatisticsMethods.h  Makefile  test
cutest-1.5/files_for_testing/: test.init
include/: implementation.h  queryMethods.h  radixHashJoin.h  relationMethods.h  rowIdArrayMethods.h  statisticsMethods.h  threadPool.h
src/: Makefile  implementation.c  main.c  queryMethods.c  radixHashJoin.c  relationMethods.c  rowIdArrayMethods.c  statisticsMethods.c  threadPool.c
workloads/: small.init  small1.work
workloads/small/: small.work
workloads/testSmall/: small.work
workloads/verySmall/: small.result
